[package]
name = "btcrpc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
rust-ini = "0.21.1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
tokio-cron-scheduler = "0.13"
